Added favicon to navbar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 		padding-left: 0.5em;
 	}
 	
+	.navbar-brand img {
+		height: 1em;
+		position: relative;
+		top: -0.1em;
+		display: inline;
+		padding-right: 0.25em;
+	}
+	
 	html, body {
 		height: 100%;
 		width: 100%;
@@ -59,7 +67,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="#">Historisk lager</a>
+		  <a class="navbar-brand" href="#"><img src="icon.png">Historisk lager</a>
 		</div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
