Adding -webkit vendor prefixes for transforms

--- a/index.html
+++ b/index.html
@@ -73,20 +73,24 @@
 		
 		.pallet.left {
 			transform: rotate(45deg);
+			-webkit-transform: rotate(45deg);
 		}
 		
 		.pallet.right {
 			transform: rotate(-45deg);
+			-webkit-transform: rotate(-45deg);
 		}
 		
 		.pallet.right label {
 			transform: rotate(45deg);
+			-webkit-transform: rotate(45deg);
 			right: -2.75em;
 			top: 2em;
 		}
 		
 		.pallet.left label {
 			transform: rotate(-45deg);
+			-webkit-transform: rotate(-45deg);
 			left: -2.75em;
 			top: 2em;
 		}
@@ -136,6 +140,7 @@
 			right: -1.25em;
 			top: 50%;
 			transform: translateY(-50%);
+			-webkit-transform: translateY(-50%);
 		}
 		
 		.shelfRow {
