Added an "Export" button for the spreadsheet

--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
 			top: 4em;
 		}
 		
+		.btn a {
+			color: white !important;
+			text-decoration: none !important;
+		}
+		
 		.shelf {
 			position: relative;
 			background: #b9acac;
@@ -185,6 +190,9 @@
 						</li>
 						<li>
 							<button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#formModal">Legg til gjenstand</button>
+						</li>
+						<li>
+							<p class="btn btn-primary navbar-btn"><a href="https://docs.google.com/spreadsheets/d/12OE0S0w51ADmfMFVTeDVUyWyREkHuX_x8wnahc3gJKw/export?format=xlsx">Eksporter</a></p>
 						</li>
 					</ul>
 				</div>
