--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 							<button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#formModal">Legg til gjenstand</button>
 						</li>
 						<li>
-							<p class="btn btn-primary navbar-btn"><a href="https://docs.google.com/spreadsheets/d/12OE0S0w51ADmfMFVTeDVUyWyREkHuX_x8wnahc3gJKw/export?format=xlsx">Eksporter</a></p>
+							<p class="btn btn-primary navbar-btn"><a href="https://docs.google.com/spreadsheets/d/12OE0S0w51ADmfMFVTeDVUyWyREkHuX_x8wnahc3gJKw/export?format=xlsx&gid=648464416">Eksporter</a></p>
 						</li>
 					</ul>
 				</div>
