Adding more export options

--- a/index.html
+++ b/index.html
@@ -192,7 +192,16 @@
 							<button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#formModal">Legg til gjenstand</button>
 						</li>
 						<li>
-							<p class="btn btn-primary navbar-btn"><a href="https://docs.google.com/spreadsheets/d/12OE0S0w51ADmfMFVTeDVUyWyREkHuX_x8wnahc3gJKw/export?format=xlsx&gid=648464416">Eksporter</a></p>
+							<div class="dropdown">
+								<button class="btn btn-primary dropdown-toggle navbar-btn" type="button" data-toggle="dropdown">Eksporter
+									<span class="caret"></span>
+								</button>
+								<ul class="dropdown-menu">
+									<li><a target="_BLANK" href="https://docs.google.com/spreadsheets/d/12OE0S0w51ADmfMFVTeDVUyWyREkHuX_x8wnahc3gJKw/export?format=pdf&gid=648464416">Regneark (.pdf, inkl. bilder)</a></li>
+									<li><a target="_BLANK" href="https://docs.google.com/spreadsheets/d/12OE0S0w51ADmfMFVTeDVUyWyREkHuX_x8wnahc3gJKw/export?format=xlsx&gid=648464416">Regneark (.xlsx)</a></li>
+									<li><a target="_BLANK" href="http://imgur.com/a/fFtZe">Bilder</a></li>
+								</ul>
+							</div>
 						</li>
 					</ul>
 				</div>
